# charlesperrycom

./: .env.example  .gitignore  CNAME  EMAIL_SETUP.md  README.md  STATIC_SITE_GENERATION.md  app.yaml  generate_static.py  generate_static_advanced.py  index.yaml  main.py  manage.py  pyproject.toml  settings.py  setup_new_site.py  site-index.html  test_url_discovery.py  urls.py  views.py
bio/: bforms.py  djangoforms.py  models.py  urls.py  views.py
books/: urls.py  views.py  xbforms.py  xmodels.py
chairs/: bforms.py  models.py  perry.html  uno.html  urls.py  views.py  virtuoso.html
docs/: index.html
docs/bio/: index.html
docs/puzzles/: index.html
jewelry/: bforms.py  models.py  urls.py  views.py
jewelry/black-hole-pin/: index.html
jewelry/celtic-cross/: index.html
jewelry/double-shell-pin/: index.html
jewelry/earrings/: index.html
jewelry/pins/: index.html
media/css/: supersized.css  the-background.css
media/js/: extras.js  jquery.galleriffic.js
media/puzzles/: puzzles.csv
media/sculpture/: art_last.csv
puzzles/: ball-puzzle.html  bforms.py  chess-set-gallery.html  chess-set.html  chess-set2.html  cube-chess-set-gallery.html  cube-chess-set-simple.html  cubic-chess-set.html  dada.html  double-puzzle.html  models.py  plexi-ball-puzzle.html  sasso-puzzle.html  urls.py  views.py  zen-puzzle.html
sculpture/: bforms.py  index.html  models.py  urls.py  views.py
sculpture/bisected-dodeca/: index.html
sculpture/black-hole-mc/: index.html
sculpture/blade/: index.html
sculpture/cantata/: index.html
static_site/: site-index.html
templates/: 400.html  404.html  500.html  base.html  base_art.html  base_bio.html  base_books.html  base_chairs.html  base_jewelry.html  base_mobile.html  base_puzzles.html  footer.html  index.html  mobile-index.html
(+266 files in other folders)
