[project]
name = "charlesperrycom"
version = "2.0.0"
description = "Charles O. Perry Artist Portfolio Website - Django-based portfolio showcasing sculpture, jewelry, puzzles, and furniture designs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=5.0,<6.0",
]
authors = [
    {name = "Charles O. Perry", email = "paul@charlesperry.com"},
]
keywords = ["django", "portfolio", "art", "sculpture", "gallery"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics :: Presentation",
]

[project.urls]
Homepage = "https://charlesperry.com"
Repository = "https://github.com/your-username/charlesperrycom"
Issues = "https://github.com/your-username/charlesperrycom/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bio", "chairs", "jewelry", "puzzles", "sculpture"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
]
